fix: faq heading alignment

--- a/themes/bella/styles/section.faqs.scss
+++ b/themes/bella/styles/section.faqs.scss
@@ -37,6 +37,8 @@
         gap: var(--spacing-48);
         display: flex;
         flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
 
         .items-area {
           width: 100%;
